--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,6 +70,10 @@ body.backImage {
     background-color: darkblue !important;
     color: white !important;
   }
+
+  .p-dialog .p-dialog-footer {
+    text-align: left !important;
+  }
   
   .ui-card-body {
     padding: 0em !important;
