--- a/src/app/pages/customer-setting/customer-setting.component.html
+++ b/src/app/pages/customer-setting/customer-setting.component.html
@@ -108,11 +108,8 @@
   <p-confirmDialog #cd>
     <p-footer>
       <div class="p-dialog-buttonpane p-helper-clearfix">
-        <div class="p-g-3" style="text-align: right">
+        <div style="display: flex; flex-direction: row; justify-content: space-between;">
           <button type="button" pButton icon="pi pi-times" label="No" (click)="cd.reject()"></button>
-        </div>
-        <div class="p-g-6"></div>
-        <div class="p-g-3">
           <button type="button" pButton icon="pi pi-check" label="Si" (click)="cd.accept()"></button>
         </div>
       </div>
