--- a/src/app/pages/richieste-utente/richieste-utente.component.html
+++ b/src/app/pages/richieste-utente/richieste-utente.component.html
@@ -12,17 +12,23 @@
         <th *ngFor="let col of columns">
           {{col.header}}
         </th>
+        <th style="text-align: center;">
+          Stato Richiesta
+        </th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-rowData let-columns="columns">
       <tr [pSelectableRow]="rowData">
-        <td *ngFor="let col of columns" [ngClass]="{
-          'inLavorazione':rowData[col.field] === 'IN LAVORAZIONE',
-          'presaInCarico':rowData[col.field] === 'PRESA IN CARICO',
-          'completata':rowData[col.field] === 'COMPLETATA',
-          'rifiutata':rowData[col.field] === 'RIFIUTATA'
-        }">
+        <td *ngFor="let col of columns">
           {{rowData[col.field]}}
+        </td>
+        <td style="text-align: center;" [ngClass]="{
+          'inLavorazione':rowData['stato'] === 'IN LAVORAZIONE',
+          'presaInCarico':rowData['stato'] === 'PRESA IN CARICO',
+          'completata':rowData['stato'] === 'COMPLETATA',
+          'rifiutata':rowData['stato'] === 'RIFIUTATA'
+        }">
+        {{rowData['stato']}}
         </td>
       </tr>
     </ng-template>
@@ -35,11 +41,13 @@
     </ng-template>
   </p-table>
   <div style="text-align:center" style="padding-top: 2em; text-align: center">
-    <button type="button" pButton icon="fa fa-plus" (click)="showDialogToAdd()" label="Aggiungi Richiesta"></button>
+    <button type="button" pButton (click)="showDialogToAdd()" label="Aggiungi Richiesta">
+      <fa-icon class="m-1" [icon]="faPlus"></fa-icon>
+    </button>
   </div>
 </div>
 
-<p-dialog header="Dettaglio Richiesta" [(visible)]="displayDialog" [closable]="true" [responsive]="true" [modal]="true" [positionTop]="50">
+<p-dialog header="Dettaglio Richiesta" [(visible)]="displayDialog" [closable]="true" [responsive]="true" [modal]="true" [positionTop]="50" [style]="{width: '45vw'}">
   <form name="form" #fRichiesteUtente="ngForm">
     <div class="p-g p-fluid" *ngIf="loggedCustomer && richiesta" style="padding-bottom: 2em">
       <div class="p-g-12">
@@ -104,14 +112,16 @@
     </div>
     <p-footer>
       <div class="p-dialog-buttonpane p-helper-clearfix" *ngIf="richiesta" style="text-align: center">
-        <div class="p-g-6" *ngIf="!newRichiesta && (richiesta.stato === 'IN LAVORAZIONE')">
-          <button type="button" pButton class="p-button-danger" icon="fa fa-trash-o" (click)="delete()" label="Elimina"></button>
-        </div>
-        <div class="p-g-6" *ngIf="!newRichiesta && (richiesta.stato === 'IN LAVORAZIONE')">
-          <button type="submit" pButton class="p-button-success" icon="fa fa-upload" (click)="save()" label="Aggiorna"></button>
-        </div>
-        <div class="p-g-12" *ngIf="newRichiesta">
-          <button type="submit" pButton class="p-button-success" icon="fa fa-check" (click)="save()" label="Salva"></button>
+        <div class="p-g-6">
+          <button type="button" *ngIf="!newRichiesta && (richiesta.stato === 'IN LAVORAZIONE')" style="margin-right: 2em;" pButton class="p-button-danger" (click)="delete()" label="Elimina">
+            <fa-icon class="m-1" [icon]="faTrash"></fa-icon>
+          </button>
+          <button type="submit" *ngIf="!newRichiesta && (richiesta.stato === 'IN LAVORAZIONE')" pButton class="p-button-success" (click)="save()" label="Aggiorna">
+            <fa-icon class="m-1" [icon]="faUpload"></fa-icon>
+          </button>
+          <button type="submit" *ngIf="newRichiesta" pButton class="p-button-success" (click)="save()" label="Salva">
+            <fa-icon class="m-1" [icon]="faCheck"></fa-icon>
+          </button>
         </div>
       </div>
     </p-footer>
@@ -121,11 +131,8 @@
 <p-confirmDialog #cd>
   <p-footer>
     <div class="p-dialog-buttonpane p-helper-clearfix">
-      <div class="p-g-3" style="text-align: right">
+      <div style="display: flex; flex-direction: row; justify-content: space-between;">
         <button type="button" pButton icon="pi pi-times" label="No" (click)="cd.reject()"></button>
-      </div>
-      <div class="p-g-6"></div>
-      <div class="p-g-3">
         <button type="button" pButton icon="pi pi-check" label="Si" (click)="cd.accept()"></button>
       </div>
     </div>
